Changed text button to arrow key

--- a/index.html
+++ b/index.html
@@ -23,10 +23,14 @@
             <canvas id="CanvasScreen" width="500" height="400"></canvas>
         </div>
         <div class="button-pad">
-            <input type="button" id="left" value="left">
+            <button type="button" id="left"><i class="fas fa-arrow-alt-circle-left"></i></i></button>
+            <button type="button" id="right"><i class="fas fa-arrow-alt-circle-right"></i></button>
+            <button type="button" id="up"><i class="fas fa-arrow-alt-circle-up"></i></button>
+            <button type="button" id="down"><i class="fas fa-arrow-alt-circle-down"></i></i></button>
+            <!-- <input type="button" id="left" value="left">
             <input type="button" id="right"  value="right">
             <input type="button" id="up" value="up">
-            <input type="button" id="down" value="down">
+            <input type="button" id="down" value="down"> -->
     
         </div>
     </main>
